# tensorflow_chessbot_package

./: .gitignore  setup.cfg  setup.py
src/tensorflow_chessbot/: chessboard_finder.py  helper_image_loading.py  helper_webkit2png.py  tensorflow_chessbot.py  tensorflow_chessbot_server.py
src/tensorflow_chessbot.egg-info/: PKG-INFO
