[metadata]
name = tensorflow_chessbot
version = 0.0.1

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    opencv-contrib-python
    requests
    tensorflow
    beautifulsoup4
    lxml
    Pillow
    importlib; python_version == "2.6"

[options.package_data]
tensorflow_chessbot = saved_models*

[options.packages.find]
where = src
include = tensorflow_chessbot*, saved_models*

[options.entry_points]
console_scripts =
    image_to_fen = tensorflow_chessbot.tensorflow_chessbot_server:main
    # image_to_fen = tensorflow_chessbot:main

;https://setuptools.readthedocs.io/en/latest/userguide/package_discovery.html#using-find-or-find-packages